// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipGroup /> selectionType="multiple" should render with selectionType="multiple" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="chip-group-167-label"
      accessible={true}
      data-blade-component="chip-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 0,
                "maxHeight": 36,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="semibold"
            lineHeight={75}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.normal"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(212, 39%, 16%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(212, 39%, 16%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Apple
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Mango
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="checkbox"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Orange
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChipGroup /> selectionType="single" should render with selectionType="single" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      accessibilityLabelledBy="chip-group-7-label"
      accessibilityRole="radiogroup"
      accessible={true}
      data-blade-component="chip-group"
      display="flex"
      flexDirection="column"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.0"
          maxHeight="36px"
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 0,
                "maxHeight": 36,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.subtle"
            data-blade-component="text"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="semibold"
            lineHeight={75}
            numberOfLines={2}
            style={
              [
                {
                  "color": "hsla(211, 26%, 34%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "letterSpacing": 0,
                  "lineHeight": 18,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Select fruits
          </Text>
          <View
            data-blade-component="visually-hidden"
            style={
              [
                {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.normal"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={100}
              style={
                [
                  {
                    "color": "hsla(212, 39%, 16%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          data-blade-component="visually-hidden"
          style={
            [
              {
                "borderColor": "black",
                "borderStyle": "solid",
                "borderWidth": 0,
                "clip": "rect(0 0 0 0)",
                "clipPath": "inset(50%)",
                "height": 1,
                "left": -10000,
                "marginBottom": -1,
                "marginLeft": 0,
                "marginRight": -1,
                "marginTop": 0,
                "overflow": "hidden",
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(212, 39%, 16%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          />
        </View>
        <View
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          style={
            [
              {
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-1-helptext-2"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="apple"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Apple
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-3-helptext-4"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="mango"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Mango
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginBottom": 8,
                  "marginRight": 8,
                },
              ]
            }
          >
            <View
              data-blade-component="chip"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                  },
                ]
              }
            >
              <View
                accessibilityDescribedBy="radio-5-helptext-6"
                accessibilityInvalid={false}
                accessibilityRequired={false}
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": false,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "display": "flex",
                      "flexDirection": "row",
                      "marginBottom": 2,
                      "marginTop": 2,
                    },
                  ]
                }
                value="orange"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="column"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <View
                    alignItems="center"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      borderColor="interactive.border.gray.faded"
                      isDisabled={false}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "alignSelf": "center",
                            "backgroundColor": "transparent",
                            "borderColor": "hsla(211, 20%, 52%, 0.18)",
                            "borderRadius": 9999,
                            "borderWidth": 1,
                            "display": "flex",
                            "flexDirection": "row",
                            "flexWrap": "nowrap",
                            "justifyContent": "center",
                            "maxWidth": 280,
                            "textAlign": "left",
                            "textOverflow": "ellipsis",
                          },
                          {
                            "transform": [
                              {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        alignItems="center"
                        backgroundColor="surface.background.gray.intense"
                        borderColor="interactive.border.gray.faded"
                        borderRadius="max"
                        borderWidth="thinner"
                        color="primary"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        height="28px"
                        isChecked={false}
                        isDisabled={false}
                        justifyContent="center"
                        overflow="hidden"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "backgroundColor": "hsla(0, 0%, 100%, 1)",
                              "borderColor": "hsla(211, 20%, 52%, 0.18)",
                              "borderRadius": 9999,
                              "borderStyle": "solid",
                              "borderWidth": 0.5,
                              "display": "flex",
                              "flexDirection": "row",
                              "height": 28,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingLeft": 12,
                              "paddingRight": 12,
                            },
                            {
                              "borderColor": "transparent",
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.gray.subtle"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={100}
                          fontStyle="normal"
                          fontWeight="regular"
                          lineHeight={100}
                          numberOfLines={1}
                          style={
                            [
                              {
                                "color": "hsla(211, 26%, 34%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Orange
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
